--- a/配置信息.ini
+++ b/配置信息.ini
@@ -51,7 +51,7 @@ custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
 custom_proxy_group=🇭🇰 香港节点`load-balance`(港|HK|hk|Hong Kong|HongKong|hongkong|HKG)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本节点`load-balance`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇲 美国节点`load-balance`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|ATL|BUF|DFW|EWR|IAD|LAX|MCI|MIA|ORD|PHX|PDX|SEA|SJC)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 美国节点`load-balance`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|USA|ATL|BUF|DFW|EWR|IAD|LAX|MCI|MIA|ORD|PHX|PDX|SEA|SJC)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇵🇱 波兰节点`load-balance`(波兰|华沙|PL|Poland|Warsaw)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇩🇪 德国节点`load-balance`(德|柏林|DE|Germany|GER)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇧🇷 巴西节点`load-balance`(巴西|圣保罗|BR|Brazil|Saopaolo)`http://www.gstatic.com/generate_204`300,,50
